fixes some of the layout issues in single view; improves the handling of responsive elements; introduces the non-generic rows used to contain sidebards

--- a/less/author.less
+++ b/less/author.less
@@ -13,35 +13,7 @@
     text-align: right;
 }
 
-.author-field {
-    color: white;
-    padding: 10px 25px 10px 25px;
-    background: url( "../img/dark-bg.png" );
 
-    .author-info,
-    .author-description p,
-    .author-link a {
-        border-top: none;
-        margin: 0;
-        margin: 0rem;
-    }
-
-    .author-info {
-        padding: 1em;
-        margin: 0;
-        overflow: hidden;
-        color: white;
-    }
-
-
-    .author-avatar {}
-
-    .author-description {
-        float: left;
-        margin-bottom: 1em;
-    }
-
-}
 
 .multiwidget_author_avatars {
     list-style: none;
@@ -86,28 +58,3 @@
     padding: 0;
 }
 
-.single-authors {
-    margin: 0 auto;
-    width: 200px;
-
-    border-left: 1px solid #cecece;
-    border-right: 1px solid #cecece;
-
-    .single-author {
-
-        text-align: center;
-
-        margin-bottom: 35px;
-
-        .single-author-avatar {
-            img {
-                border-radius: 5em;
-            }
-        }
-
-        .single-author-name {
-
-        }
-    }
-
-}
