--- a/less/style.less
+++ b/less/style.less
@@ -38,6 +38,8 @@ body {
 
 body .site {
     background: none;
+    padding: 0;
+    margin: 0;
 }
 
 /*Opera Fix*/
@@ -156,11 +158,7 @@ body .site {
 }
 
 
-.nav-next, .nav-previous {
-    display: block;
-    margin-top: 1em;
-    margin-bottom: 2em;
-}
+
 
 
 
